--- a/proiectraport.in
+++ b/proiectraport.in
@@ -1,8 +1,9 @@
 template=RaportProiect.docx
 outfile=RaportProiectDa.docx
-titlu=Serie videouri cum sa nu x
-descriere=Propunerea mea de a face un videoclip despre cum sa nu fi un lider in care e bagat si modusul a fost primita cu reticenta. Prima oara am sugerat sa facem o serie de clipuri despre lidership dar am primit 2 reactii negative si doar una pozitiva. 2v2. Am decis sa o las moarta cu subiectul modus pe moment si sa ma focuses pe un subiect independent. Ce urmeaza acum e sa fac o lista cu posibile subiecte si un scurt reseach la fiecare. 
-data=2/11/2021
+titlu=Cursuri pentru modus HTML
+descriere=O sa inchei proiectul aici deoarece Robi se ocupa in totalitate de el deja, iar deadlineul propus a fost atins. Sunt sanse sa mai adaug rapoarte aici in caz ca treaba merge mai prost, dar desfasurarea proiectului nu mai e in mainile mele de azi.
+data=7/11/2021
+
 
 
 
