--- a/proiectstart.in
+++ b/proiectstart.in
@@ -1,10 +1,13 @@
 template=template.docx
 outfile=templateSave.docx
-titlu=Serie Videoclipuri << CUM SA NU x >>
-descriere=Toata lumea iti spune ce sa faci si cum astfel incat totul sa iasa perfect. Dar daca nu vrei asta? Daca tu vrei sa inveti cum sa o dai in bara grav? Am o solutie pentru tine! Ma ofer sa te invat printr-o serie de videoclipuri cum sa nu faci nimic, cum sa gresesti peste masura, cum sa nu iti iasa nimic bun intr-un final. Cu placere! 
-categorie=Youtube, Eseu Videoclip
-scop=Crearea unui videoclip pilot pentru aceasta serie noua.
-obiective=Research si alegere subiect, scriere si corectare script, filmare video, editare video, pregatire tactica marketare, postare clip, marketare clip
+titlu=Job Router
+descriere=M-am bagat in vara intr-un proiect despre cum sa folosesc jobrouter. Tutorialele sunt multe si cu probleme, asa ca in mare nu am avut niciodata chef sa lucrez, dar mi-am propus sa rup din mine si sa termin proiectul asta odata pentru totdeauna
+categorie=Proiect extern, Personal
+scop=Terminarea tuturor tutorialelor de pe jobrouter
+obiective=Sa termin toate tutorialele de pe jobrouter si sa iau o nota cat mai mare la teste.
+data_incepere=14/11/2021
+data_finalizare=01/12/2021
+
 
 
 
